src/z80asm/z80asm2/t/40-syntax/expected/label_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/label_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/label_01.asm...
t/40-syntax/input/label_01.asm:7:1: error: Unrecognized instruction or directive
    label3 ; error
    ^
Program
    LabelStmt
        Location: t/40-syntax/input/label_01.asm:1:1
        Label: label1
    LabelStmt
        Location: t/40-syntax/input/label_01.asm:2:1
        Label: label2
    LabelStmt
        Location: t/40-syntax/input/label_01.asm:3:1
        Label: global@local1
        Local part: @local1
    LabelStmt
        Location: t/40-syntax/input/label_01.asm:4:1
        Label: global@local2
        Local part: @local2
    LabelStmt
        Location: t/40-syntax/input/label_01.asm:5:1
        Label: @local3
        Local part: @local3
    LabelStmt
        Location: t/40-syntax/input/label_01.asm:6:1
        Label: local4
